# sandbox

./: .gitignore  README.md  git-bash.bat
celery/: README.md  celeryconfig.py  tasks.py  usercode.py
cmake/: README.md
compose_app/: README.md  docker-compose.nginx.yml  docker-compose.traefik.yml  docker-compose.yml
compose_app/my_site/: Dockerfile  requirements.txt
compose_app/my_site/basic_app/: celery.py  models.py  tasks.py  urls.py  userwidget.py  views.py
compose_app/my_site/basic_app/templates/basic_app/: index.html
compose_app/my_site/my_site/: settings.py  urls.py
compose_app/my_site/scripts/: recreate-db.sh
compose_app/nginx/: default.conf
compose_app/xvfb/: Dockerfile
conan/: CMakeLists.txt  README.md  conanfile.py  main.cpp
conan/inc/: Calculations.h
conan/src/: Calculations.cpp
conan/tests/: CMakeLists.txt  test_calculations.cpp
conda/: README.md
coredump/: CMakeLists.txt  CMakePresets.json  environment.yml  main.cpp
coredump/linux/: README.md
coredump/windows/: EnableCrashDumps.reg  README.md
cpp/: returning-const-value-causes-copy.cpp  returning-lr-values-by-refval.cpp
dind/: Dockerfile  README.md  docker-compose.yml  run.py
dind/mini/: Dockerfile
docker_sdk/: Dockerfile  README.md  run_docker.py
docker_sdk/config/: .autotest  run_autotest.sh  test.py
gdb/: README.md
git/: .bash_profile  .gitconfig  README.md  git-bash-with-ninja.bat
gui/: environment.yml
gui/mvp/: README.md
gui/thread/: CMakeLists.txt  README.md
gui/thread/option1/: CMakeLists.txt  InvokeGUIWidget.ui  InvokeModel.cpp  InvokeModel.h  InvokePresenter.cpp  InvokePresenter.h  InvokeView.cpp  InvokeView.h  main.cpp
gui/thread/option2/: CMakeLists.txt  PollGUIWidget.ui  PollModel.cpp  PollModel.h  PollPresenter.cpp  PollPresenter.h  PollView.cpp  PollView.h  main.cpp
linux/: README.md
nomachine/: README.md
pre-commit/: README.md
ssh/: README.md
subversion/: README.md
terminal/: README.md
tools/: README.md
variadic_templates/: README.md  recursive_add.py  simple_add.py  variadic_add.cpp
